  log messages in the middle of arbitrary computations.
* Mutables can now be marked as constant, which is useful when working with
  constant data structures that cannot be conveniently represented as constant
  terms.
* Unicode characters can now be encoded in string literals using an
  escape sequence.

Changes to the Mercury standard library:

* We have added versions of list.foldl/4 and list.foldr/4 that have 
  determinism multi.

* We have changed the interface of the ops module to make lookups of operators
  more efficient.

* We have added list.map2_foldl3/10, list.map_corresponding_foldl/6 and
  list.map_corresponding3_foldl/7 

* We have added io.update_globals/3 which allows for atomic updates to
  the globals field in the I/O state in the presence of multiple threads.

* We have added string.c_pointer_to_string/{1,2} and string.from_c_pointer/1
  to convert c_pointers to a human readable form.

* We have changed term.variable so that it records the context where
  the variable was used.  This required the backward mode of
  term.var_list_to_term_list to be removed.  The backwards mode is
  now accessed via term.term_list_to_var_list.

* We have renamed some library predicates whose names were ambiguous.

* The type software_error/0 has been moved from the require module into
  the exception module.

Changes to the Mercury compiler:

* The compiler now issues a warning when an inst declaration is not
  consistent with any of the types in scope.

Changes to the Mercury deep profiler:

* The deep profiler now supports measuring a proxy for time: a counter that
  is incremented at each call. Since calls happen a lot more frequently than
  clock interrupts, this can yield useful profiles for shorter-running
  programs.

DETAILED LISTING
================

Changes to the Mercury language:

* The restriction on typeclass instances that all type variables appearing in
  the range of a functional dependency must be monomorphic has been relaxed.